<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/payment"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_dialog_patment_account"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:text="@string/textView"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:text="@string/report"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_participant1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="200dp"
        android:text="@string/participant1"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_participant2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="250dp"
        android:text="@string/participant2"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_participant3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="300dp"
        android:text="@string/participant3"
        android:textColor="@color/black"
        android:textSize="18sp" />



    <CheckBox
        android:id="@+id/cb_d_payment_rude1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200sp"
        android:layout_marginTop="200dp"
        android:text="@string/rude" />

    <CheckBox
        android:id="@+id/cb_d_payment_rude2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200sp"
        android:layout_marginTop="250dp"
        android:text="@string/rude" />

    <CheckBox
        android:id="@+id/cb_d_payment_rude3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200sp"
        android:layout_marginTop="300dp"
        android:text="@string/rude" />

    <CheckBox
        android:id="@+id/cb_d_payment_run1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300sp"
        android:layout_marginTop="200dp"
        android:text="@string/run" />

    <CheckBox
        android:id="@+id/cb_d_payment_run2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300sp"
        android:layout_marginTop="250dp"
        android:text="@string/run" />

    <CheckBox
        android:id="@+id/cb_d_payment_run3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300sp"
        android:layout_marginTop="300dp"
        android:text="@string/run" />

    <Button
        android:id="@+id/btn_d_payment"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:background="#F44336"
        android:text="확인"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</FrameLayout>
