<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dialog.PaymentFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="#203458"
        android:text="@string/payment"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_payment_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="200dp"
        android:background="#203458"
        android:text="@string/report"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_participant1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:text="@string/participant1"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_participant2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:text="@string/participant2"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_participant3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:text="@string/participant3"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <CheckBox
        android:id="@+id/cb_payment_rude1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200sp"
        android:layout_marginTop="250dp"
        android:text="@string/rude" />

    <CheckBox
        android:id="@+id/cb_payment_rude2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200sp"
        android:layout_marginTop="300dp"
        android:text="@string/rude" />

    <CheckBox
        android:id="@+id/cb_payment_rude3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200sp"
        android:layout_marginTop="350dp"
        android:text="@string/rude" />

    <CheckBox
        android:id="@+id/cb_payment_run1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300sp"
        android:layout_marginTop="250dp"
        android:text="@string/run" />

    <CheckBox
        android:id="@+id/cb_payment_run2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300sp"
        android:layout_marginTop="300dp"
        android:text="@string/run" />

    <CheckBox
        android:id="@+id/cb_payment_run3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300sp"
        android:layout_marginTop="350dp"
        android:text="@string/run" />

    <Button
        android:id="@+id/btn_payment"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="30dp"
        android:background="#F1F2F3"
        android:text="확인"
        android:textColor="@color/black"
        android:textStyle="bold" />

</FrameLayout>
