<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_navi.ProfileFragment">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/nickname"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:text="@string/age_group"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="250dp"
        android:text="@string/account"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="150dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="250dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="600dp"
        android:background="#4169E1"
        android:text="@string/edit"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="600dp"
        android:background="#4169E1"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />



</FrameLayout>