<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dialog.FilteringFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="top"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/area"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="250dp"
        android:text="@string/fellowship"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="450dp"
        android:text="@string/age_group"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/rb_amity1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="300dp"
        android:text="제한없음" />

    <RadioButton
        android:id="@+id/rb_amity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:text="친목있음" />

    <RadioButton
        android:id="@+id/rb_amity3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="300dp"
        android:text="친목없음" />

    <Spinner
        android:id="@+id/filtering_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/filtering_age_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="500dp"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btn_filtering_ok"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="650dp"
        android:background="#4169E1"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />



</FrameLayout>
