<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CreateFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="메뉴"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:text="만날 장소"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="250dp"
        android:text="만날 시간"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="350dp"
        android:text="친목 여부"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="450dp"
        android:text="참여 인원수"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="550dp"
        android:text="나이 제한"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_create_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="메뉴 입력" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="130dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_create_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="장소 입력" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/et_create_date"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:inputType="date"
        android:hint="날짜 입력"/>

    <EditText
        android:id="@+id/et_create_time"
        android:layout_width="120dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="230dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:hint="시간 입력"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="350dp">

        <RadioButton
            android:id="@+id/rb_create_fellowship_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/all"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/rb_create_fellowship_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/rb_create_fellowship_ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="19sp" />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="430dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_create_num_prt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="인원수 입력" />
    </com.google.android.material.textfield.TextInputLayout>





    <Button
        android:id="@+id/btn_create_ok"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="650dp"
        android:background="#F44336"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />




</FrameLayout>